--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "android"]
-	path = android
-	url = git@github.com:gasttoncho-lab/android-app.git
+    path = android
+    url = https://github.com/gasttoncho-lab/android-app.git
 [submodule "backend"]
-	path = backend
-	url = git@github.com:gasttoncho-lab/planillafiscalpesca-backend.git
+    path = backend
+    url = https://github.com/gasttoncho-lab/planillafiscalpesca-backend.git
+
